# unitares-governance-plugin

./: .mcp.json  CODEX_START.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
commands/: checkin.md  diagnose.md  dialectic.md  governance-start.md
config/: defaults.env
docs/: README.md  adapters.md  check-ins.md  llm-wiki-vs-kg.md  ontology-need.md
hooks/: hooks.json  post-edit  post-identity  post-stop  pre-edit  pre-governance-call  session-end  session-start
scripts/: _check_freshness.py  _freshness_warning.py  _redact.py  _session_lookup.py  _slot_from_stdin.py  audit_identity_contract.py  auto_checkin_decision.py  checkin.py  detect-corrections.py  file_lease_hook.py  governance_call_inject.py  identity_sidecar.py  onboard_helper.py  session_cache.py  substrate_floor.py  tag_normalize.py
skills/: SKILLS_MANIFEST.sha256
tests/: conftest.py  test_auto_checkin_decision.py  test_checkin_helper.py  test_file_lease_hook.py  test_governance_call_inject.py  test_hook_breadcrumbs.py  test_hooks_slot_aware.py  test_identity_contract_audit.py  test_identity_sidecar.py  test_mcp_autowire.py  test_onboard_resume.py  test_onboard_slot_isolation.py  test_post_edit_refactor.py  test_post_identity_hook.py  test_post_stop_hook.py  test_redact.py  test_server_alias_registration.py  test_session_cache.py  test_session_end_hook.py  test_session_lookup.py  test_session_start_checkin.py  test_slot_from_stdin.py  test_strict_thread_anchor_contract.py  test_substrate_floor.py  test_tag_normalize.py
(+23 files in other folders)
